# Logger_Dashboard

./: .gitignore  README.md
backend/: .prettierrc.json  data.json  eslint.config.js  jest.config.js  package-lock.json  package.json
backend/server/: app.js  mqttClient.js
backend/server/__tests__/: adm.test.js  common.test.js  data.test.js  equipment.test.js  house.test.js  process.test.js  user.test.js
backend/server/libs/: jwtToken.js
backend/server/middleware/: body-validation.js  file.js  jwtValidation.js  socket.js
backend/server/util/: database.js  nodemailer.js  responseHelper.js  sequelizeTools.js
database/: db.sql
docs/: LoggerDashboard.postman_collection.json
docs/Cover/PicoLogger/: ButtonExtender.stl
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminUserSelect.tsx  (+12 more)
logger/Application_CAN/: sniffer.py
logger/Application_USB/: WindowUI.ui  iot_logger.py  keygen.py  usb_commands.txt  wifi_commands.txt  window_main.py
logger/ESP32/: config.py  fast_check.py  hash.py  main.py  mqtt_simple.py  program.py  status.json  stm32_uart.py  wireless.py
logger/ESP32/rtos/main/: CMakeLists.txt  app_flags.c  app_flags.h  gpio.c  gpio.h  idf_component.yml  main.c  mqtt.c  mqtt.h  support.c  support.h  uart.c  uart.h  wifi.c  wifi.h
logger/Micropython/: bme280_i2c.py  config.py  i2c_lcd.py  lcd_api.py  main.py  rtc_clock.py  rtc_simple.py  sht30.py  sht30_simple.py  sht40.py  test.py
permissions/: permissions.json
(+688 files in other folders)
